--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.3",
     "@react-oauth/google": "^0.8.0",
-    "@tanstack/react-query": "^4.36.0",
+    "@tanstack/react-query": "^4.41.0",
     "antd": "^5.9.0",
+    "axios": "^1.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
