Configre google signup and signin related functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 VITE_API_BASE_URL=http://127.0.0.1:8000/api
+
+# Configure firebase authentication related configuration variable 
+VITE_FIREBASE_API_KEY=AIzaSyDCNymEhBwXLHQZk7FnHwFPkcEapjpyKDM
+VITE_FIREBASE_AUTH_DOMAIN=slot-ai-backend.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=slot-ai-backend
+VITE_FIREBASE_STORAGE_BUCKET=slot-ai-backend.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=563176034997
+VITE_FIREBASE_APP_ID=1:563176034997:web:bf6017592f537b45a424fc
+VITE_FIREBASE_MEASUREMENT_ID=G-GCTT4X730G
